# the_goal_post

./: .dockerignore  .gitignore  Cargo.toml  README.md  docker-compose.yml  manual_tests.md  run-dev.sh  test_api.sh
.env/: .env.dev  .env.prod
.kiro/specs/nfl-prediction-dashboard/: design.md  requirements.md  tasks.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  routes.rs
backend/src/db/: error.rs  migrations.rs  mod.rs  schema.rs
backend/src/models/: game.rs  mod.rs  prediction.rs  team.rs
backend/src/services/: data_collection.rs  mod.rs
frontend/: Cargo.toml  Trunk.toml  index.html
frontend/src/: main.rs
frontend/src/components/: dashboard.rs  game_card.rs  mock_data_form.rs  mod.rs
frontend/src/components/grids/: grid_3c.rs  mod.rs
share/: Cargo.toml
share/src/models/: betting.rs  team.rs
temp/: analyze_value.py  betting_table.html  nfl_predictions.csv  parse_html_to_csv.py  predictions_table.html  probability_analysis.py
