[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
surrealdb = "2.2.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
thiserror = "2.0.11"
serde_json = "1.0.139"
e57 = "0.11.10"
