[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
wasm-bindgen = "0.2"
share = { path = "../share" }
web-sys = { version = "0.3", features = [
  "HtmlSelectElement",
  "HtmlInputElement",
  "Event",
  "EventTarget",
  "File",
  "FileList",
  "FileReader",
] }
wasm-bindgen-futures = "0.4"
gloo-timers = "0.2"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"